reverted file name change; working on rpc connection

--- a/contrib/init/bitcoind.conf
+++ b/contrib/init/bitcoind.conf
@@ -3,14 +3,14 @@ description "Bitcoin Core Daemon"
 start on runlevel [2345]
 stop on starting rc RUNLEVEL=[016]
 
-env BITCOIND_BIN="/usr/bin/bitcoind"
-env BITCOIND_USER="bitcoin"
-env BITCOIND_GROUP="bitcoin"
-env BITCOIND_PIDDIR="/var/run/bitcoind"
+env COFFEECOIND_BIN="/usr/bin/coffeecoind"
+env COFFEECOIND_USER="coffeecoin"
+env COFFEECOIND_GROUP="coffeecoin"
+env COFFEECOIND_PIDDIR="/var/run/coffeecoind"
 # upstart can't handle variables constructed with other variables
-env BITCOIND_PIDFILE="/var/run/bitcoind/bitcoind.pid"
-env BITCOIND_CONFIGFILE="/etc/bitcoin/bitcoin.conf"
-env BITCOIND_DATADIR="/var/lib/bitcoind"
+env COFFEECOIND_PIDFILE="/var/run/coffeecoind/coffeecoind.pid"
+env COFFEECOIND_CONFIGFILE="/etc/coffeecoin/coffeecoin.conf"
+env COFFEECOIND_DATADIR="/var/lib/coffeecoind"
 
 expect fork
 
@@ -20,13 +20,13 @@ kill timeout 60
 
 pre-start script
     # this will catch non-existent config files
-    # bitcoind will check and exit with this very warning, but it can do so
+    # coffeecoind will check and exit with this very warning, but it can do so
     # long after forking, leaving upstart to think everything started fine.
     # since this is a commonly encountered case on install, just check and
     # warn here.
-    if ! grep -qs '^rpcpassword=' "$BITCOIND_CONFIGFILE" ; then
-        echo "ERROR: You must set a secure rpcpassword to run bitcoind."
-        echo "The setting must appear in $BITCOIND_CONFIGFILE"
+    if ! grep -qs '^rpcpassword=' "$COFFEECOIND_CONFIGFILE" ; then
+        echo "ERROR: You must set a secure rpcpassword to run coffeecoind."
+        echo "The setting must appear in $COFFEECOIND_CONFIGFILE"
         echo
         echo "This password is security critical to securing wallets "
         echo "and must not be the same as the rpcuser setting."
@@ -44,22 +44,22 @@ pre-start script
         exit 1
     fi
 
-    mkdir -p "$BITCOIND_PIDDIR"
-    chmod 0755 "$BITCOIND_PIDDIR"
-    chown $BITCOIND_USER:$BITCOIND_GROUP "$BITCOIND_PIDDIR"
-    chown $BITCOIND_USER:$BITCOIND_GROUP "$BITCOIND_CONFIGFILE"
-    chmod 0660 "$BITCOIND_CONFIGFILE"
+    mkdir -p "$COFFEECOIND_PIDDIR"
+    chmod 0755 "$COFFEECOIND_PIDDIR"
+    chown $COFFEECOIND_USER:$COFFEECOIND_GROUP "$COFFEECOIND_PIDDIR"
+    chown $COFFEECOIND_USER:$COFFEECOIND_GROUP "$COFFEECOIND_CONFIGFILE"
+    chmod 0660 "$COFFEECOIND_CONFIGFILE"
 end script
 
 exec start-stop-daemon \
     --start \
-    --pidfile "$BITCOIND_PIDFILE" \
-    --chuid $BITCOIND_USER:$BITCOIND_GROUP \
-    --exec "$BITCOIND_BIN" \
+    --pidfile "$COFFEECOIND_PIDFILE" \
+    --chuid $COFFEECOIND_USER:$COFFEECOIND_GROUP \
+    --exec "$COFFEECOIND_BIN" \
     -- \
-    -pid="$BITCOIND_PIDFILE" \
-    -conf="$BITCOIND_CONFIGFILE" \
-    -datadir="$BITCOIND_DATADIR" \
+    -pid="$COFFEECOIND_PIDFILE" \
+    -conf="$COFFEECOIND_CONFIGFILE" \
+    -datadir="$COFFEECOIND_DATADIR" \
     -disablewallet \
     -daemon
 
