--- a/coffeecoin.conf
+++ b/coffeecoin.conf
@@ -1,3 +1,10 @@
+server=1
+mainnet=1
+rpcuser=rylee
+rpcpassword=pass
+rpcallowip=127.0.0.1
+rpcport=8432
+
 ##
 ## Coffeecoin.conf configuration file. Lines beginning with # are comments.
 ##
@@ -13,7 +20,7 @@
 #regtest=0
 
 # Connect via a SOCKS5 proxy
-#proxy=127.0.0.1:9050
+proxy=127.0.0.1:9050
 
 # Bind to given address and always listen on it. Use [host]:port notation for IPv6
 #bind=<addr>
@@ -105,7 +112,7 @@
 # server=1 tells Coffeecoin-Qt to accept JSON-RPC commands.
 # it is also read by Coffeecoind to determine if RPC should be enabled
 #rpcallowip=10.1.1.34/255.255.255.0
-#rpcallowip=1.2.3.4/24
+rpcallowip=1.2.3.4/24
 #rpcallowip=2001:db8:85a3:0:0:8a2e:370:7334/96
 
 # Listen for RPC connections on this TCP port:
