--- a/coffeecoin.conf
+++ b/coffeecoin.conf
@@ -20,7 +20,7 @@ rpcport=8432
 #regtest=0
 
 # Connect via a SOCKS5 proxy
-proxy=127.0.0.1:9050
+#proxy=127.0.0.1:9050
 
 # Bind to given address and always listen on it. Use [host]:port notation for IPv6
 #bind=<addr>
